Fixed Header Arrow Alignment

--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,7 @@ body {
     .arrow {
         animation: hop-up .75s cubic-bezier(1, 1, 1, 1) 5s forwards;
 
-        @apply absolute flex bottom-0 left-1/2 p-2 bg-slate-600 hover:bg-slate-500 border-[3px] border-slate-700 hover:border-slate-600 rounded-full shadow-slate-600 hover:shadow-md hover:shadow-slate-800 shadow-sm opacity-0 hover:scale-125 transition-all;
+        @apply absolute flex bottom-0 left-1/2 p-2 bg-slate-600 hover:bg-slate-500 border-[3px] border-slate-700 hover:border-slate-600 rounded-full shadow-slate-600 hover:shadow-md hover:shadow-slate-800 shadow-sm opacity-0 hover:scale-125 -translate-x-1/2 transition-all;
     }
 
     .main {
